2004-04-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Added the --enable-magick-compat option to install
	compatibility links to emulate ImageMagick commands.
	* magick/command.c: Ensure that each sub-command responds to -help
	and -version appropriately.
	* utilities/gm.c (main): Invoke appropriate sub-command if gm is
	executed under a traditional alternate name such as "convert". The
	user may create hard or symbolic links from 'gm' to a traditional
	ImageMagick utility name (or just copy 'gm' to the desired
	sub-command name) in order to be 100% command-line compatible with
	ImageMagick 5.5.2. This is necessary in order to work with
	existing software designed to execute ImageMagick utilities.

2004-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/compress.c (Ascii85Tuple): Encoding bug is indeed fixed
	on DEC Alpha. Also warnings reduction with Digital Unix compiler.

2004-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/compress.c (Ascii85Tuple): Add casts to reduce compiler
	warnings, and maybe even fix a bug.
	* coders/pdf.c (ReadPDFImage): Double-check that Ghostscript
	produced an output file since sometimes it reports success after
	it has spewed an error message and has produced no output.

2004-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/compress.c (HuffmanEncode2Image): Avoid out of bounds
	array access.
	* magick/studio.h (_FILE_OFFSET_BITS): Fix _FILE_OFFSET_BITS
	#ifdef to avoid warnings when it is not defined.

2004-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix minor shell syntax error (used ==).

2004-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Merged in updates from 1.1 release branch.
	* version.sh (PACKAGE_VERSION): Release version 1.1.
	(PACKAGE_VERSION): Next major release will be 1.1.  Bump library
	versions since we anticipate adding interfaces.
	* magick/studio.h: Disabled use of Windows message lookups