@@ -56,6 +56,8 @@
 2004-04-10  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> utilities/gm.c (main): Default usage message wasn't right for
+        aliased utility.<BR>
   <LI> configure.ac: Added the --enable-magick-compat option to install
         compatibility links to emulate ImageMagick commands.
   <LI> magick/command.c: Ensure that each sub-command responds to -help
